[metadata]
name = correctipy
version = 0.0.1
description = Python package for computing corrected test statistics for comparing machine learning models on correlated samples
author = Trent Henderson
license = MIT
license_file = LICENCE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    correctipy
install_requires =
    numpy>=1.19.0
    scipy>=1.5.0
    pandas>=1.1.0
    
[options.extras_require]
testing = 
    pytest>=6.2.0
    pytest-cov>=3.0